add: Work, Private classes. HasFormatter interface. Function to log form data on submit

--- a/index.html
+++ b/index.html
@@ -47,6 +47,6 @@
       src="https://kit.fontawesome.com/2e94fa5060.js"
       crossorigin="anonymous"
     ></script>
-    <script src="sandbox.js"></script>
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
